<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categorias"
    android:background="@drawable/fondo_pantallas_principal">

    <Button
        android:id="@+id/cateAbono"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_cateAbono"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <Button
        android:id="@+id/cateAgua"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_cateAgua"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <Button
        android:id="@+id/cateEnergia"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_cateEnergia"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <Button
        android:id="@+id/cateCrecimiento"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_cateCrecimiento"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <Button
        android:id="@+id/cateEstadisticas"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_estadisticas"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="#7718C1"
        android:contentDescription="@string/btn_descriptionBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</androidx.constraintlayout.widget.ConstraintLayout>